<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">*</string>
    <string name="_share">÷</string>
    <string name="_equally">=</string>
    <string name="_reset">C</string>
    <string name="settings">set</string>
    <string name="presice">Точность вычисления</string>
    <string name="_1_znak">1 знак после запятой</string>
    <string name="_3_znaka">3 знака после запятой</string>
    <string name="_5_znaka">5 знаков после запятой</string>
    <string name="save_button">Сохранить</string>
    <string name="label_set">Настройки</string>
</resources>