<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tablo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:hint="@string/_0"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:background="@drawable/my_border"
        android:textSize="@dimen/button_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/screen_logo2"
        android:scaleType="fitEnd"/>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="4"
    android:gravity="center"
    android:orientation="horizontal">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/digit_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_1"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/digit_two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_2"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/digit_three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_3"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/plus_operation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_plus"
            android:textSize="@dimen/button_text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/digit_four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_4"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/digit_five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_5"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/digit_six_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_6"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/minus_operation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_minus"
            android:textSize="@dimen/button_text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/digit_seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_7"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/digit_eight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_8"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/digit_nine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_9"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/mult_operation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_multiply"
            android:textSize="@dimen/button_text" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/digit_zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_span="2"
            android:text="@string/_0"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/point_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_point"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/share_operation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_share"
            android:textSize="@dimen/button_text" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/calc_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_span="3"
            android:text="@string/_equally"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/reset_operation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/_reset"
            android:textSize="@dimen/button_text" />
    </TableRow>
</TableLayout>
</FrameLayout>